--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
+    "crypto": "^1.0.1",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
